--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic/angular": "^4.7.1",
     "core-js": "^2.5.4",
     "firebase": "^8.2.1",
+    "google-libphonenumber": "^3.2.15",
     "moment": "^2.24.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
