--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "core-js": "^2.5.4",
+    "date-fns": "^2.16.1",
     "firebase": "^8.2.1",
     "google-libphonenumber": "^3.2.15",
     "moment": "^2.24.0",
