--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@capacitor/android": "^2.4.5",
+    "@capacitor/android": "^2.4.6",
     "@capacitor/core": "2.4.5",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.7.1",
-    "core-js": "^2.5.4",
+    "@ionic-native/core": "^5.30.0",
+    "@ionic-native/splash-screen": "^5.30.0",
+    "@ionic-native/status-bar": "^5.30.0",
+    "@ionic/angular": "^4.11.13",
+    "core-js": "^2.6.12",
     "date-fns": "^2.16.1",
-    "firebase": "^8.2.1",
-    "google-libphonenumber": "^3.2.15",
-    "moment": "^2.24.0",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
+    "firebase": "^8.2.3",
+    "google-libphonenumber": "^3.2.16",
+    "moment": "^2.29.1",
+    "rxjs": "^6.5.5",
+    "tslib": "^1.14.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -48,17 +48,17 @@
     "@ionic/angular-toolkit": "~2.0.0",
     "@ionic/lab": "2.0.8",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
