--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "^5.30.0",
     "@ionic-native/status-bar": "^5.30.0",
     "@ionic/angular": "^4.11.13",
+    "@rxweb/reactive-form-validators": "^2.1.2",
     "core-js": "^2.6.12",
     "date-fns": "^2.16.1",
     "firebase": "^8.2.3",
